--- a/public/task1.html
+++ b/public/task1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="task1linking.css" rel="stylesheet">
-     <link href="task1mobileview.css" rel="stylesheet"> 
+    <link href="task1linking.css" rel="stylesheet" />
+    <!-- <link href="task1mobileview.css" rel="stylesheet">  -->
   </head>
   <title>My first task</title>
   <body>
@@ -361,9 +361,9 @@
               </p>
             </div>
             <!-- center footer  -->
-            <div class="centerfotter">  
+            <div class="centerfotter">
               <div class="mid">
-                <a href="#" class="final">  services</a>
+                <a href="#" class="final"> services</a>
                 <a href="#" class="final">products</a>
                 <a href="#" class="final">About us</a>
                 <a href="#" class="final">locations</a>
@@ -380,4 +380,3 @@
     </footer>
   </body>
 </html>
-
